--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
             <a href="#">header link three</a>
         </div>
     </div>
+
+    <div class="hero">
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <div class="hero-button">
+            <button>Sign up</button>
+        </div>
+        
+        <img src="" alt="this is a placeholder for an image">
+    </div>
     
 </body>
 </html>
