--- a/index.html
+++ b/index.html
@@ -22,9 +22,36 @@
         <div class="hero-button">
             <button>Sign up</button>
         </div>
+        <div class="hero-image">
+            <img src="" alt="this is a placeholder for an image">
+        </div>
         
-        <img src="" alt="this is a placeholder for an image">
     </div>
     
+    <div class="container-one">
+        <h1>Some random information</h1>
+        <div class="content">
+            <div class="items">
+                <div class="box"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="items">
+                <div class="box"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="items">
+                <div class="box"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="items">
+                <div class="box"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-two">
+        <h2>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I konw is that is looks nice.</h2>
+    </div>
 </body>
 </html>
