--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
         </div>
     </div>
 
-    <div class="container-two">
-        <h2>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I konw is that is looks nice.</h2>
+    <div class="quote-section">
+        <div class="quote-text">
+            <h2>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I konw is that is looks nice.</h2>
+        </div>
+        <div class="quote-source">-Thor, God of Thunder</div>
     </div>
 </body>
 </html>
