--- a/index.html
+++ b/index.html
@@ -56,5 +56,17 @@
         </div>
         <div class="quote-source">-Thor, God of Thunder</div>
     </div>
+
+    <div class="call-action">
+        <div class="call-action-text">
+            <h2>Call to action! It's time!</h2>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+
+        <div class="call-action-button">
+            <button>Sign up</button>
+        </div>
+    </div>
+    
 </body>
 </html>
