Made hero, hero-content divs

--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="navigation">
-        <div class="logo">Header Logo</div>
-        <div class="header-links">
-            <a href="#">header link one</a>
-            <a href="#">header link two</a>
-            <a href="#">header link three</a>
-        </div>
-    </div>
-
     <div class="hero">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <div class="hero-button">
-            <button>Sign up</button>
+        <div class="navigation">
+            <div class="logo">Header Logo</div>
+            <div class="header-links">
+                <a href="#">header link one</a>
+                <a href="#">header link two</a>
+                <a href="#">header link three</a>
+            </div>
+        </div>
+
+        <div class="hero-content">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <div class="hero-button">
+                <button>Sign up</button>
+            </div>
         </div>
         <div class="hero-image">
             <img src="" alt="this is a placeholder for an image">
@@ -28,7 +30,7 @@
         
     </div>
     
-    <div class="container-one">
+    <div class="container">
         <h1>Some random information</h1>
         <div class="content">
             <div class="items">
