--- a/index.html
+++ b/index.html
@@ -70,5 +70,8 @@
         </div>
     </div>
     
+    <footer>
+        <div>Copyright &#169; The Odin Project 2021</div>
+    </footer>
 </body>
 </html>
