Add div with .footer class to footer. Add .footer to .hero for background color style

--- a/index.html
+++ b/index.html
@@ -70,8 +70,11 @@
         </div>
     </div>
     
-    <footer>
-        <div>Copyright &#169; The Odin Project 2021</div>
-    </footer>
+    <div class="footer">
+        <footer>
+            <div>Copyright &#169; The Odin Project 2021</div>
+        </footer>
+    </div>
+    
 </body>
 </html>
