--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         
             <div class="hero-image">
-                <img src="" alt="this is a placeholder for an image">
+                <img src="images/pawel.jpg" alt="this is a placeholder for an image">
             </div>
         </div>
     </div>
